--- a/install_deps.yml
+++ b/install_deps.yml
@@ -4,4 +4,4 @@
   tasks:
     - name: Install dependencies
       pip:
-        requirements: /path/to/requirements.txt
+        requirements: requirements.txt
