--- a/connectivity.yaml
+++ b/connectivity.yaml
@@ -11,6 +11,10 @@
   #     username: "admin"
   #     password: "Suresh@1234"
   tasks:
+    - name: Install pan-python temporarily
+      ansible.builtin.pip:
+        name: pan-python
+        
     - name: Run basic operational command (show system info)
       panos_op:
         provider: "{{ provider }}"
